[package]
name = "net-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
pnet = "0.35.0"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
trust-dns-client = "0.23"
reqwest = { version = "0.11", features = ["rustls-tls"] }
rand = "0.8"
anyhow = "1.0.101"
